--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,8 +1,11 @@
-<!DOCTYPE html>
-<title>Hello from Flask</title>
-{% if name %}
-<h1>Hello {{ name }}!</h1>
-{% else %}
-<h1>Hello there.</h1>
-{% endif %}
-<span>{{ psql_v }}</span>
+{% extends "base.html" %} 
+{% block content %}
+<section class="view">
+    {% if name %}
+    <h1>Hello {{ name }}!</h1>
+    {% else %}
+    <h1>Hello there.</h1>
+    {% endif %}
+    <span>{{ psql_v }}</span>
+</section>
+{% endblock %}
