FEAT: locales table

--- a/src/templates/counter.html
+++ b/src/templates/counter.html
@@ -8,21 +8,21 @@
         <div class="digit">
         </div>
     </div>
-    <span>{{text["0"]}}</span>
+    <span>{{text[0]}}</span>
     <div class="digits">
         <div class="digit" data-now="0" data-next="2" data-animate>
         </div>
         <div class="digit" data-now="0" data-next="3" data-animate>
         </div>
     </div>
-    <span>{{text["1"]}}</span>
+    <span>{{text[1]}}</span>
     <div class="digits">
         <div class="digit" data-now="0" data-next="5" data-animate>
         </div>
         <div class="digit" data-now="0" data-next="9" data-animate>
         </div>
     </div>
-    <span>{{text["2"]}}</span>
+    <span>{{text[2]}}</span>
     <div class="digits">
         <div class="digit" data-now="0" data-next="5" data-animate>
         </div>
