--- a/src/templates/error.html
+++ b/src/templates/error.html
@@ -8,7 +8,7 @@
 <section id="error" class="view">
     <div>¯\_(ツ)_/¯</div>
     <div>
-        {{text[code]}}. {{text["0"]}} <a href="/">{{text["1"]}}</a>?
+        {{text[code]}}. {{text[0]}} <a href="/">{{text[1]}}</a>?
     </div>
 </section>
 {% endblock %}
