--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -15,6 +15,7 @@
     --color-primary: #9BCF53;    
     --color-primary-light: #BFEA7C;    
     --color-primary-dark: #416D19;    
+    --color-secondary: #004f9f;    
 }
 
 *, *::before, *::after {
@@ -56,7 +57,7 @@ body {
     align-items: center;
     width: 100%;
     height: 64px;
-    top: 10px;
+    top: 0px;
     padding-right: 20px;
     background-color: var(--color-primary-dark);
     color: white;
