--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -226,3 +226,52 @@ body {
     font-size: 4rem;
     text-align: center;
 }
+
+#groups.view {
+    flex-flow: row wrap;
+    justify-content: center;
+    align-self: center;
+    padding: 50px 0 50px 0;
+    gap: 50px;
+    max-width: 800px;
+}
+
+#groups.view .group {
+    width: 375px;
+    max-width:375px;
+    padding-bottom: 10px;
+    border: 2px solid var(--color-secondary);
+    border-radius: 4px;
+}
+
+#groups.view .group .label {
+    background-color: var(--color-secondary);
+    text-align: center;
+    padding: 10px 0;
+    font-size: 1.2rem;
+}
+
+#groups.view .group .label a {
+    color: white;
+    text-decoration: none;
+}
+
+#groups.view .group .logo {
+    width: 32px;
+    object-fit: contain;
+}
+
+#groups.view .group .teams {
+    display: grid;
+    grid-template-columns: 32px 4fr 1fr 1fr 1fr;
+    grid-template-rows: repeat(auto-fill, 1fr);
+    align-items: center;
+    column-gap: 10px;
+    row-gap: 10px;
+    padding: 10px;
+    text-align: right;
+}
+
+#groups.view .group .team {
+    text-align: left;
+}
