--- a/src/templates/groups.html
+++ b/src/templates/groups.html
@@ -3,14 +3,14 @@
 {% set groups = config["locale"]["groups"]["name"] %}
 {% set teams = config["locale"]["teams"]["name"] %}
 {% block title %}
-<title>{{text["0"]}}</title>
+<title>UEFA EURO 2024 {{text["0"]}}</title>
 {% endblock title %} 
 {% block head %} {% endblock %}
 {% block content %} 
 <section id="groups" class="view">
     {% for row in data %}
         <div class="group">
-            <div class="label"><a href="/groups/{{row['id']|string}}">{{text["1"]}} {{groups[row["id"]|string]}}</a></div>
+            <div class="label"><a href="/groups/{{row['id']|string}}">{{groups[row["id"]|string]}}</a></div>
             <div class="teams">
                 <div></div>
                 <div></div>
