--- a/src/templates/groups.html
+++ b/src/templates/groups.html
@@ -5,7 +5,9 @@
 {% block title %}
 <title>UEFA EURO 2024 {{text["0"]}}</title>
 {% endblock title %} 
-{% block head %} {% endblock %}
+{% block head %} 
+<link rel="stylesheet" href="/static/css/groups.css" />
+{% endblock %}
 {% block content %} 
 <section id="groups" class="view">
     {% for row in data %}
@@ -18,7 +20,9 @@
                 <div>-</div>
                 <div class="points">P</div>
                 {% for team in row["teams"] %}
-                    <img class="logo" src="{{row['logoes'][loop.index0]}}"/>
+                    <div class="logobox">
+                        <img class="logo" src="{{row['logoes'][loop.index0]}}" data-ignore="{{team}}"/>
+                    </div>
                     <div class="team"><a href="/teams/{{team|string}}">{{teams[team|string]}}</a></div>
                     <div>{{row["goals_for"][loop.index0]}}</div>
                     <div>{{row["goals_against"][loop.index0]}}</div>
