--- a/src/static/css/group.css
+++ b/src/static/css/group.css
@@ -1,25 +1,22 @@
 #group.view {
-    align-self: center;
+    align-self: stretch;
     flex-flow: column nowrap;
     align-items: center;
-    width: 800px;
-    max-width: 800px;
     padding: 50px 0;
 }
 
 #group.view .group {
-    --logo-size: 48px;
-    width: 700px;
-    max-width:700px;
+    --logo-size: 38px;
+    width: 100%;
 }
 
 #group.view .group .teams {
     display: grid;
-    grid-template-columns: 1fr 4fr repeat(6, 1fr);
+    grid-template-columns: 1fr 2fr repeat(6, 1fr);
     grid-template-rows: repeat(auto-fill, var(--logo-size));
-    column-gap: 10px;
+    column-gap: 5px;
     row-gap: 10px;
-    padding: 50px 10px;
+    padding: 50px 5px;
     text-align: center;
 }
 
@@ -27,10 +24,9 @@
     display: grid;
     grid-template-columns: 2fr 4fr 1fr 4fr 2fr;
     grid-template-rows: repeat(auto-fill, 48px);
-    column-gap: 10px;
+    column-gap: 5px;
     row-gap: 10px;
-    padding: 50px 50px;
-    padding-bottom: 3vh;
+    padding: 50px 5px;
 }
 
 #group.view .group .team.home {
@@ -46,4 +42,10 @@
     color: black;
     text-decoration: none;
     cursor: pointer;
+}
+
+@media only screen and (min-width: 768px) {
+    #group.view .group {width: 768px;--logo-size: 48px}
+    #group.view .group .teams {column-gap: 10px;}
+    #group.view .group .fixtures {column-gap: 10px; padding: 50px;}
 }
