--- a/src/static/css/groups.css
+++ b/src/static/css/groups.css
@@ -1,17 +1,14 @@
 #groups.view {
     align-self: center;
     flex-flow: row wrap;
-    justify-content: center;
-    width: 800px;
-    max-width: 800px;
+    align-items: center;
     padding: 50px 0;
     gap: 50px;
 }
 
 #groups.view .group {
     --logo-size: 32px;
-    width: 350px;
-    max-width:350px;
+    width: 100%;
 }
 
 #groups.view .group .label a {
@@ -26,4 +23,10 @@
     column-gap: 10px;
     row-gap: 10px;
     padding: 10px;
+}
+
+@media only screen and (min-width: 768px) {
+    #groups.view {width: 768px;}
+    #groups.view .group {width: 334px;--logo-size: 38px}
+    #groups.view .group .teams {column-gap: 10px;}
 }
