--- a/src/templates/nav-bar.html
+++ b/src/templates/nav-bar.html
@@ -24,10 +24,13 @@
             <button class="material-symbols-outlined button">home</button>
         </a>
     </div>
+    <button class="material-symbols-outlined burger button">menu</button>
 </section>
 <script>(function () {
-    let searchbox = document.querySelector(".controlbox");
-    let children = Array.from(searchbox.children);
+    let burger = document.querySelector(".burger")
+    let controlbox = document.querySelector(".controlbox");
+    let linkbox = document.querySelector(".linkbox");
+    let children = Array.from(controlbox.children);
 
     for (let i = 0; i < 2; i++) {
         children[i].addEventListener("blur", (e) => {
@@ -46,5 +49,19 @@
             children[i+2].dataset["toggled"] = children[i].dataset["toggled"]= "true";
             children[i].firstElementChild.focus();
         });
-    }})()
+    }
+
+    burger.addEventListener("pointerdown", (e) => {
+        if (e.target.dataset["toggled"] == "true") {
+            e.target.innerText = "menu"
+            e.target.dataset["toggled"] = "false"
+            return
+        } 
+
+        e.target.innerText = "close"
+        e.target.dataset["toggled"] = "true"
+    })
+
+
+})()
 </script>
