FEAT: Ctx preproccessor

--- a/src/templates/counter.html
+++ b/src/templates/counter.html
@@ -1,4 +1,4 @@
-{% set text = config["locale"]["counter"] %}
+{% set text = locale["counter"] %}
 <div id="counter" >
     <div class="digits">
         <div class="digit" data-now data-next data-animate>
