--- a/src/templates/error.html
+++ b/src/templates/error.html
@@ -4,7 +4,7 @@
 {% endblock title %} 
 {% block head %} {% endblock %}
 {% block content %} 
-{% set text = config["locale"]["views"]["error"] %}
+{% set text = locale["views"]["error"] %}
 <section id="error" class="view">
     <div>¯\_(ツ)_/¯</div>
     <div>
