--- a/src/templates/nav-bar.html
+++ b/src/templates/nav-bar.html
@@ -1,4 +1,4 @@
-{% set text = config["locale"]["navbar"] %}
+{% set text = locale["navbar"] %}
 <section id="nav-bar">
     <div class="linkbox">
         <a class="link" href="/teams">{{text["0"]}}</a>
@@ -10,16 +10,16 @@
             <input type="text" />
         </form>
         <div class="locales" tabindex="-1">
-            {% for row in config["locales"] %}
-                {% if row["id"] == config["locale"]["id"] %}
-                    <a class="link" href="/locale/{{row['id']}}"><strong>{{row["locale"]["name"]}}</strong></a>
+            {% for row in locales %}
+                {% if row["id"] == locale["id"] %}
+                    <a class="link" href="/locale/{{row['id']}}"><strong>{{row["name"]}}</strong></a>
                 {% else %}
-                    <a class="link" href="/locale/{{row['id']}}" >{{row["locale"]["name"]}}</a>
+                    <a class="link" href="/locale/{{row['id']}}" >{{row["name"]}}</a>
                 {% endif %}
             {% endfor %}    
         </div>
         <button class="material-symbols-outlined button">search</button>
-        <button class="button">{{config["locale"]["name"]}}</button>
+        <button class="button">{{locale["name"]}}</button>
         <a class="link" href="/">
             <button class="material-symbols-outlined button">home</button>
         </a>
