--- a/src/templates/groups.html
+++ b/src/templates/groups.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} 
-{% set text = config["locale"]["views"]["groups"] %}
-{% set groups = config["locale"]["groups"]["name"] %}
-{% set teams = config["locale"]["teams"]["name"] %}
+{% set text = locale["views"]["groups"] %}
+{% set groups = locale["groups"]["name"] %}
+{% set teams = locale["teams"]["name"] %}
 {% block title %}
 <title>UEFA EURO 2024 {{text["0"]}}</title>
 {% endblock title %} 
