--- a/src/templates/groups[id].html
+++ b/src/templates/groups[id].html
@@ -6,7 +6,7 @@
 <title>UEFA EURO 2024 {{groups[group[0]["id"]|string]}}</title>
 {% endblock title %} 
 {% block head %} 
-<link rel="stylesheet" href="/static/css/groups:id.css" />
+<link rel="stylesheet" href="/static/css/groups[id].css" />
 {% endblock %}
 {% block content %} 
 <section id="group" class="view">
