--- a/datamanager/templates/README.templ
+++ b/datamanager/templates/README.templ
@@ -2,7 +2,7 @@ dm command [options]
 
 Usage:
     backup{{"\t"}}[-c <string>] [-d <string>] [-u <string>]
-    populate{{"\t"}}[-f <file>] [-c <string>] [-d <string>] [-u <string>]
+    populate{{"\t"}}[-c <string>] [-d <string>] [-u <string>] [-f <file>]
     dump{{"\t"}}[-c <string>] [-d <string>] [-u <string>] [-o <path>]
     restore{{"\t"}}(-ls [-f <file>] | -f <file>]) [-c <string>] [-d <string>] [-u <string>]
 
@@ -10,7 +10,6 @@ Options:
     -c{{"\t\t"}}Name of the docker container. Defaults to "{{.c}}"
     -d{{"\t\t"}}Name of the PostgreSQL database. Defaults to "{{.d}}"
     -u{{"\t\t"}}Name of the PostgreSQL user. Defaults to "{{.u}}"
-    -t{{"\t\t"}}Name of a table. Defaults to all.
     -o{{"\t\t"}}Output path. Defaults to "schema/schema.sql"
     -ls{{"\t\t"}}Lists all or a specific backup.
     -f{{"\t\t"}}Specifies a file to use.
