--- a/src/templates/teams.html
+++ b/src/templates/teams.html
@@ -1,18 +1,43 @@
 {% extends "base.html" %}
-
+{% block head %} 
+<link rel="stylesheet" href="/static/css/teams.css" />
+{% endblock %}
 {% block title %}
     <title>Teams - UEFA EURO 2024</title>
 {% endblock %}
 
 {% block content %}
 <main>
-    <h1>Teams</h1>
     {% for team in teams %}
-        <div class="teams-box">
-            <h3 class="teams-id">{{ team.id }}</h3>
-            <p class="teams-name">{{ team.name }}</p>
-            <p class="teams-code">{{ team.code }}</p>
-            <img class="teams-logo" src="{{ team.logo }}"/>
+        <div class="teams container col">
+            <div class="teams row end">
+                <div class="teams box">
+                    <p class="teams label">C</p>
+                    <p class="teams label">R</p>
+                    <p class="teams label">P</p>
+                    <p class="teams label">W</p>
+                    <p class="teams label">L</p>
+                    <p class="teams label">D</p>
+                    <p class="teams label">G</p>
+                </div>
+            </div>    
+            <div class="teams row">
+                    <div class="teams box">
+                        <div class="teams logo-container">
+                            <img class="teams logo" src="{{ team.logo }}"/>
+                        </div>
+                        <p class="teams label">{{ team.name }}</p>
+                    </div>
+                    <div class="teams box">
+                        <p class="teams label">{{ team.code }}</p>
+                        <p class="teams label">{{ team.rank }}</p>
+                        <p class="teams label">{{ team.points }}</p>
+                        <p class="teams label">{{ team.wins }}</p>
+                        <p class="teams label">{{ team.loses }}</p>
+                        <p class="teams label">{{ team.draws }}</p>
+                        <p class="teams label">{{ team.group_id }}</p>
+                    </div>
+                </div>
         </div>
     {% endfor %}
 </main>
