--- a/src/templates/fixtures.html
+++ b/src/templates/fixtures.html
@@ -12,7 +12,7 @@
             <summary class="date-header">{{ date }}</summary>
             <div class="fixtures-group">
                 {% for fixture in fixtures %}
-                    <div class="fixture-box">
+                    <div class="fixture-box" id="fixture-{{ fixture.id }}">
                         <div class="teams">
                             <a href="/teams/{{ fixture.home_id }}" class="team">
                                 <img src="{{ fixture.home_logo }}" alt="{{ fixture.home_name }} flag" class="team-flag">
@@ -32,4 +32,19 @@
         </details>
     {% endfor %}
 </main>
-{% endblock %}teams
+{% if scroll_to_id %}
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        var element = document.getElementById('fixture-' + '{{ scroll_to_id }}');
+        if (element) {
+            element.style.backgroundColor = 'rgba(255, 255, 0, 0.3)';
+            element.scrollIntoView({ behavior: 'smooth', block: 'start' });
+
+            setTimeout(function() {
+                window.scrollBy(0, -125); // Adjust landing screen upwards
+            }, 0);
+        }
+    });
+</script>
+{% endif %}
+{% endblock %}
