--- a/src/templates/teams.html
+++ b/src/templates/teams.html
@@ -42,6 +42,10 @@
         if (element) {
             element.style.backgroundColor = 'rgba(255, 255, 0, 0.3)';
             element.scrollIntoView({ behavior: 'smooth', block: 'start' });
+
+            setTimeout(function() {
+                window.scrollBy(0, -75); // Adjust landing screen upwards
+            }, 0);
         }
     });
 </script>
