--- a/src/templates/teams.html
+++ b/src/templates/teams.html
@@ -41,11 +41,7 @@
         var element = document.getElementById('team-' + '{{ scroll_to_id }}');
         if (element) {
             element.style.backgroundColor = 'rgba(255, 255, 0, 0.3)';
-            element.scrollIntoView({ behavior: 'smooth', block: 'start' });
-
-            setTimeout(function() {
-                window.scrollBy(0, -75); // Adjust landing screen upwards
-            }, 0);
+            element.scrollIntoView({ behavior: 'smooth', block: 'end' });
         }
     });
 </script>
